--- a/style.css
+++ b/style.css
@@ -100,4 +100,12 @@ html, body {
         border-bottom: 1px solid #333333;
         border-left: 1px solid #CCCCCC;
       }
-   
+      h1 {
+        display: block;
+        font-size: 2em;
+        margin-block-start: 0.67em;
+        margin-block-end: 0.67em;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+        font-weight: bold;
+      }
